--- a/examples/cloudrun/ruby/Dockerfile
+++ b/examples/cloudrun/ruby/Dockerfile
@@ -37,4 +37,4 @@ RUN bundle install \
 COPY . ./
 COPY --from=gcr.io/berglas/berglas:latest /bin/berglas /bin/berglas
 
-ENTRYPOINT ["/bin/berglas", "exec", "./bin/bundle", "exec", "ruby", "app.rb"]
+ENTRYPOINT exec /bin/berglas exec -- ./bin/bundle exec ruby app.rb
