Always use ${} for referencing variables

--- a/examples/cloudrun/python/Dockerfile
+++ b/examples/cloudrun/python/Dockerfile
@@ -15,7 +15,7 @@
 FROM python:3.7
 
 ENV APP_ENV=production
-ENV PATH="/home/appuser/.local/bin:$PATH"
+ENV PATH="/home/appuser/.local/bin:${PATH}"
 ENV PORT=8080
 WORKDIR /usr/src/app
 
@@ -25,4 +25,4 @@ RUN pip install -r requirements.txt
 COPY . ./
 COPY --from=gcr.io/berglas/berglas:latest /bin/berglas /bin/berglas
 
-ENTRYPOINT exec /bin/berglas exec -- gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 8 app:app
+ENTRYPOINT exec /bin/berglas exec -- gunicorn --bind 0.0.0.0:${PORT} --workers 1 --threads 8 app:app
