--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,6 +20,7 @@ steps:
   - GO111MODULE=on
   - GOOGLE_CLOUD_BUCKET=berglas-test-secrets
   - GOOGLE_CLOUD_KMS_KEY=projects/berglas-test/locations/global/keyRings/my-keyring/cryptoKeys/my-key
+  - GOOGLE_CLOUD_SERVICE_ACCOUNT=berglas-test@berglas-test.iam.gserviceaccount.com
   entrypoint: make
   args: ['test-acc']
 
