Doc that alpine-based base images need ca-certs
Refs GH-26

--- a/examples/cloudrun/node/Dockerfile
+++ b/examples/cloudrun/node/Dockerfile
@@ -12,6 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Note: if you switch to a slim base image, like an alpine-based image, you
+# will need to add the ca-certificates package for Berglas to work.
 FROM node:10
 
 ENV NODE_ENV=production
