--- a/examples/appengineflex/go/Dockerfile
+++ b/examples/appengineflex/go/Dockerfile
@@ -27,6 +27,7 @@ RUN go build \
   -ldflags "-s -w -extldflags 'static'" \
   -installsuffix cgo \
   -tags netgo \
+  -mod vendor \
   -o /bin/app \
   .
 
