--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,39 @@
-# Copyright 2019 The Berglas Authors
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#      http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 language: go
 
-go:
-- '1.13'
+matrix:
+  include:
+  - os: linux
+    dist: xenial
 
-git:
-  quiet: true
+  - os: osx
 
-cache:
-  directories:
-  - $HOME/.cache/go-build
-  - $HOME/gopath/pkg/mod
+  - os: windows
+    before_install:
+    - choco install make
 
 env:
-- GO111MODULE=on
+  global:
+  - GO111MODULE=on
+  - GO111MODULE=on
+  - GOOGLE_CLOUD_BUCKET=berglas-test-secrets
+  - GOOGLE_CLOUD_KMS_KEY=projects/berglas-test/locations/global/keyRings/my-keyring/cryptoKeys/my-key
+  - GOOGLE_CLOUD_SERVICE_ACCOUNT=berglas-test@berglas-test.iam.gserviceaccount.com
+  - GOOGLE_APPLICATION_CREDENTIALS=/tmp/account.json
+
+go:
+- 1.13.x
+
+git:
+  depth: 1
+  quiet: true
 
 branches:
   only:
   - master
 
+before_script:
+- openssl aes-256-cbc -K $encrypted_c5c9a0caec9c_key -iv $encrypted_c5c9a0caec9c_iv -in ./test/account.json.enc -out /tmp/account.json -d
+
 install: true
 
-matrix:
-  fast_finish: true
-
-script: make test
+script: make test-acc
