Remove runtime environment lookup
In theory, looking up the environment variables set on the service added an additional layer of security. In practice, it significantly hinders adoption and worsens it. Users are giving their service accounts project owner or editor because they don't know what kinds of permissions to grant. This drops all runtime environment configuration which greatly simplifies the codebase and improves the UX.

--- a/examples/cloudbuild/cloudbuild.yaml
+++ b/examples/cloudbuild/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
   env:
   - API_KEY=berglas://${_BUCKET_ID}/api-key?destination=/secrets/api-key
   - TLS_KEY=berglas://${_BUCKET_ID}/tls-key?destination=/secrets/tls-key
-  args: ["exec", "--local", "--", "/bin/sh"]
+  args: ["exec", "--", "/bin/sh"]
   volumes:
   - name: secrets
     path: /secrets
