Declare GOOGLE_CLOUD_PROJECT in cloudbuild

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,6 +18,7 @@ steps:
   env:
   - PROJECT_ROOT=berglas
   - GO111MODULE=on
+  - GOOGLE_CLOUD_PROJECT=berglas-test
   - GOOGLE_CLOUD_BUCKET=berglas-test-secrets
   - GOOGLE_CLOUD_KMS_KEY=projects/berglas-test/locations/global/keyRings/my-keyring/cryptoKeys/my-key
   - GOOGLE_CLOUD_SERVICE_ACCOUNT=berglas-test@berglas-test.iam.gserviceaccount.com
