--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -1,13 +1,27 @@
-name: 'Close stale'
+# Copyright 2020 The Berglas Authors
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+name: Lock ckised
 on:
   schedule:
   - cron: '0 0 * * *'
 
 jobs:
   lock:
-    runs-on: 'ubuntu-latest'
+    runs-on: ubuntu-latest
     steps:
-    - uses: 'dessant/lock-threads@v2'
+    - uses: dessant/lock-threads@v2
       with:
         github-token: '${{ github.token }}'
         issue-lock-inactive-days: 14
