--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,21 +17,21 @@ name: Test
 on:
   push:
     branches:
-      - master
+    - main
+    tags:
+    - '*'
   pull_request:
     branches:
-      - master
+    - main
 
 jobs:
+  # test runs the tests
   test:
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        go: [1.14]
-
-    name: ${{ matrix.os }}, go ${{ matrix.go }}
-
+    name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -39,7 +39,7 @@ jobs:
 
     - uses: actions/setup-go@v2
       with:
-        go-version: '${{ matrix.go }}'
+        go-version: '1.14'
 
     - uses: actions/cache@v2
       with:
@@ -58,10 +58,65 @@ jobs:
     - name: Setup credentials
       run: echo '${{ secrets.GOOGLE_CREDENTIALS }}' > ${{ runner.temp }}/account.json
 
-    - run: make test-acc
+    - name: Test
+      run: make test-acc
       env:
         GOOGLE_APPLICATION_CREDENTIALS: ${{ runner.temp }}/account.json
         GOOGLE_CLOUD_PROJECT: berglas-test
         GOOGLE_CLOUD_BUCKET: berglas-test-secrets
         GOOGLE_CLOUD_KMS_KEY: projects/berglas-test/locations/global/keyRings/my-keyring/cryptoKeys/my-key
         GOOGLE_CLOUD_SERVICE_ACCOUNT: berglas-test@berglas-test.iam.gserviceaccount.com
+
+  # binaries builds and publishes the go binaries, only on push and tag
+  binaries:
+    if: ${{ success() && (github.event_name == 'push' || github.event_name == 'tag') }}
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        goos: ['darwin', 'linux', 'windows']
+        goarch: ['amd64']
+
+    name: ${{ matrix.goos }}/${{ matrix.goarch }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '1.14'
+
+    - uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    - name: Get dependencies
+      run: go get -t ./...
+
+    - name: Build binaries
+      env:
+        CGO_ENABLED: 0
+        GOOS: ${{ matrix.goos }}
+        GOARCH: ${{ matrix.goarch }}
+      run: |-
+        go build \
+          -a \
+          -trimpath \
+          -ldflags "-s -w -extldflags '-static'" \
+          -tags 'osusergo netgo static_build' \
+          -o build/${{ env.GOOS }}_${{ env.GOARCH }}/berglas \
+          . \
+          && \
+        strip build/${{ env.GOOS }}_${{ env.GOARCH }}/berglas \
+          && \
+        chmod +x build/${{ env.GOOS }}_${{ env.GOARCH }}/berglas
+
+    - name: Upload binaries
+      uses: GoogleCloudPlatform/github-actions/upload-cloud-storage@master
+      with:
+        credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
+        path: build/
+        destination: gs://berglas/${{ github.ref }}/
