--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: Lock ckised
+name: Lock closed
 on:
   schedule:
   - cron: '0 0 * * *'
