--- a/examples/kubernetes/deploy/sample.yaml
+++ b/examples/kubernetes/deploy/sample.yaml
@@ -1,10 +1,13 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: envserver
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: envserver
   template:
     metadata:
       labels:
@@ -12,18 +15,18 @@ spec:
     spec:
       serviceAccountName: envserver
       containers:
-      - name: envserver
-        image: sethvargo/envserver
-        imagePullPolicy: Always
-        command: ["/bin/envserver"]
-        env:
-        # This is an example using Berglas with Secret Manager storage.
-        - name: API_KEY
-          value: sm://PROJECT_ID/my-secret
+        - name: envserver
+          image: sethvargo/envserver
+          imagePullPolicy: Always
+          command: ["/bin/envserver"]
+          env:
+            # This is an example using Berglas with Secret Manager storage.
+            - name: API_KEY
+              value: sm://PROJECT_ID/my-secret
 
-        # This is an example using Berglas with Cloud Storage storage.
-        - name: API_KEY
-          value: berglas://BUCKET_ID/my-secret
+            # This is an example using Berglas with Cloud Storage storage.
+            - name: API_KEY
+              value: berglas://BUCKET_ID/my-secret
 
 ---
 apiVersion: v1
@@ -35,7 +38,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 80
-    targetPort: 8080
+    - port: 80
+      targetPort: 8080
   selector:
     app: envserver
