--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
 
     - uses: actions/setup-go@v2
       with:
-        go-version: '1.14'
+        go-version: '1.16'
 
     - uses: actions/cache@v2
       with:
@@ -101,7 +101,7 @@ jobs:
 
     - uses: actions/setup-go@v2
       with:
-        go-version: '1.14'
+        go-version: '1.16'
 
     - uses: actions/cache@v2
       with:
@@ -129,12 +129,12 @@ jobs:
           -a \
           -trimpath \
           -ldflags "-s -w -extldflags '-static'" \
-          -tags 'osusergo netgo static_build' \
+          -tags "osusergo,netgo,static,static_build" \
           -o build/${{ env.GOOS }}_${{ env.GOARCH }}/berglas \
           .
 
     - name: Upload binary
-      uses: GoogleCloudPlatform/github-actions/upload-cloud-storage@master
+      uses: google-github-actions/upload-cloud-storage@main
       with:
         credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
         path: build/${{ matrix.goos }}_${{ matrix.goarch }}
@@ -162,6 +162,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Authenticate to Artifact Registry
+      uses: docker/login-action@v1
+      with:
+        username: _json_key
+        password: ${{ secrets.GOOGLE_CREDENTIALS }}
+        registry: ${{ matrix.target }}
+
     - name: Extract ref
       id: extract_ref
       shell: bash
@@ -172,11 +179,11 @@ jobs:
         echo "##[set-output name=ref;]$(echo ${REF})"
 
     - name: ${{ matrix.target }}
-      uses: docker/build-push-action@v1
+      uses: docker/build-push-action@v2
       with:
-        username: _json_key
-        password: ${{ secrets.GOOGLE_CREDENTIALS }}
-        registry: ${{ matrix.target }}
-        repository: ${{ matrix.repository }}
-        always_pull: true
-        tags: ${{ steps.extract_ref.outputs.ref }}
+        push: true
+        pull: true
+        tags: ${{ matrix.target }}/${{ matrix.repository }}:${{ steps.extract_ref.outputs.ref }}
+        labels: |
+          org.opencontainers.image.source=${{ github.event.repository.html_url }}
+          org.opencontainers.image.revision=${{ github.sha }}
