--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,24 +17,22 @@ name: CI/CD
 on:
   push:
     branches:
-    - main
+    - 'main'
     tags:
     - '*'
   pull_request:
     branches:
-    - main
+    - 'main'
 
 jobs:
   # test runs the tests
   test:
     strategy:
       fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: 'ubuntu-latest'
 
-    name: ${{ matrix.os }}
+    name: 'test'
 
     env:
       CREDS_JSON: ${{ secrets.GOOGLE_CREDENTIALS }}
@@ -54,7 +52,6 @@ jobs:
           ${{ runner.os }}-go-
 
     - name: Lint
-      if: ${{ matrix.os == 'ubuntu-latest' }}
       run: make fmtcheck staticcheck spellcheck
 
     - name: Test (Unit)
@@ -138,7 +135,8 @@ jobs:
       with:
         credentials: ${{ secrets.GOOGLE_CREDENTIALS }}
         path: build/${{ matrix.goos }}_${{ matrix.goarch }}
-        destination: berglas/${{ steps.extract_ref.outputs.ref }}
+        destination: berglas/${{ steps.extract_ref.outputs.ref }}/${{ matrix.goos }}_${{ matrix.goarch }}/
+        parent: false
 
   # container builds and publishes the docker container
   container:
