--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,23 @@ permissions:
   packages: 'write'
 
 jobs:
+  build_and_push:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Login to GitHub Container Registry
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+
+    - name: Build and Push Docker Image
+      run: |
+        DOCKER_IMAGE_NAME=$(echo "${{ github.repository }}" | awk -F / '{print $2}')
+        TAG_NAME=$(echo "${{ github.ref }}" | sed 's#refs/tags/##')
+        
+        docker build . -t ghcr.io/${{ github.repository }}/${DOCKER_IMAGE_NAME}:${TAG_NAME} -f kubernetes/pkg/Dockerfile
+        docker push ghcr.io/${{ github.repository }}/${DOCKER_IMAGE_NAME}:${TAG_NAME}
   release:
     runs-on: 'ubuntu-latest'
     steps:
