Update deps and fix version output

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,9 +15,9 @@ builds:
     ldflags:
       - '-s'
       - '-w'
-      - '-X={{ .ModulePath }}/internal/version.Name=berglas'
-      - '-X={{ .ModulePath }}/internal/version.Version={{ .Version }}'
-      - '-X={{ .ModulePath }}/internal/version.Commit={{ .FullCommit }}'
+      - '-X={{ .ModulePath }}/internal/version.name=berglas'
+      - '-X={{ .ModulePath }}/internal/version.version={{ .Version }}'
+      - '-X={{ .ModulePath }}/internal/version.commit={{ .FullCommit }}'
       - '-extldflags=-static'
     goos:
       - 'darwin'
