--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: 'actions/setup-go@v4'
+      - uses: 'actions/setup-go@v5'
         with:
-          go-version: '1.21'
+          go-version-file: 'go.mod'
 
       - uses: 'docker/login-action@v3'
         with:
@@ -47,7 +47,7 @@ jobs:
           gpg_private_key: '${{ secrets.GPG_PRIVATE_KEY }}'
           passphrase: '${{ secrets.GPG_PASSPHRASE }}'
 
-      - uses: 'goreleaser/goreleaser-action@v5'
+      - uses: 'goreleaser/goreleaser-action@v6'
         with:
           version: 'latest'
           args: 'release --clean'
