--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,19 +27,31 @@ jobs:
     steps:
       - uses: 'actions/checkout@v4'
 
-      - uses: 'actions/setup-go@v4'
+      - uses: 'actions/setup-go@v5'
         with:
-          go-version: '1.21'
+          go-version-file: 'go.mod'
 
-      - run: 'go mod download'
+      - name: 'Unit tests'
+        run: |-
+          go test \
+            -count=1 \
+            -race \
+            -short \
+            -shuffle=on \
+            -timeout='10m' \
+            ./...
 
-      - run: 'make test'
-        if: '${{ !env.CREDENTIALS }}'
-
-      - uses: 'google-github-actions/auth@v0'
+      - uses: 'google-github-actions/auth@v2'
         if: '${{ env.CREDENTIALS }}'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-      - run: 'make test-acc'
+      - name: 'Acceptance tests'
         if: '${{ env.CREDENTIALS }}'
+        run: |-
+          go test \
+            -count=1 \
+            -race \
+            -shuffle=on \
+            -timeout='10m' \
+            ./...
