--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,9 @@ jobs:
       GOOGLE_CLOUD_SERVICE_ACCOUNT: 'berglas-test@berglas-test.iam.gserviceaccount.com'
 
     steps:
-      - uses: 'actions/checkout@v4'
+      - uses: 'actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683' # ratchet:actions/checkout@v4
 
-      - uses: 'actions/setup-go@v5'
+      - uses: 'actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34' # ratchet:actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
 
@@ -41,7 +41,7 @@ jobs:
             -timeout='10m' \
             ./...
 
-      - uses: 'google-github-actions/auth@v2'
+      - uses: 'google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f' # ratchet:google-github-actions/auth@v2
         if: '${{ env.CREDENTIALS }}'
         with:
           credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
